# keyring-gitlab-pypi

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yml  pre-commit.yml  python-publish.yml
src/keyrings/: gitlab_pypi.py
tests/: conftest.py  test_config.py
