[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "keyring-gitlab-pypi"
version = "1.1"
description = "keyring backend for GitLab package indexes"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Frazer McLean", email = "frazer@frazermclean.co.uk" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.9"
dependencies = [
    "keyring>=25.6.0",
    "platformdirs>=4.3.7",
    "tomli>=2.2.1; python_full_version<'3.11'",
    "yarl>=1.19.0",
]

[project.entry-points."keyring.backends"]
"GitLab PyPI" = "keyrings.gitlab_pypi"

[project.urls]
Repository = "https://github.com/RazerM/keyring-gitlab-pypi"

[dependency-groups]
dev = [
    { include-group = "coverage" },
    { include-group = "nox" },
    { include-group = "test" },
    "ruff==0.11.9",
]
coverage = [
    "coverage[toml]>=7.10.2",
]
nox = [
    "nox>=2025.2.9",
]
test = [
    "attrs>=25.3.0",
    "pyfakefs>=5.8.0",
    "pytest-xdist>=3.6.1",
    "pytest>=8.3.5",
    "tomli-w>=1.2.0",
]
typing = [
    "mypy>=1.15.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff.lint]
select = [
    "E4", "E7", "E9", "F", # ruff defaults
    "I", # isort
    "UP", # pyupgrade
]

[tool.coverage.run]
branch = true
relative_files = true
source = ["keyrings.gitlab_pypi", "tests/"]
parallel = true
patch = ["subprocess"]

[tool.coverage.paths]
source = ["src/keyrings", ".nox/**/site-packages/keyrings"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    '^\s*pass$',
    '^\s*raise NotImplementedError\b',
    '^\s*return NotImplemented\b',
    '^\s*raise$',
    '^\s*\.\.\.$',
    '^\s*if (typing\.)?TYPE_CHECKING:',
    '^\s*(typing\.)?assert_never\('
]

[tool.mypy]
check_untyped_defs = true
disallow_any_decorated = true
disallow_any_generics = true
disallow_any_unimported = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_reexport = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
explicit_package_bases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
